--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,9 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
+    --success: 142.1 76.2% 36.3%;
+    --success-foreground: 355.7 100% 97.3%;
+
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 231 48% 48%;
@@ -65,6 +68,9 @@
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
+    
+    --success: 142.1 76.2% 36.3%;
+    --success-foreground: 355.7 100% 97.3%;
 
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
